organize response endpoint movie/list
